k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cat-api-app
  name: cat-api-app
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: cat-api-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cat-api-app
    spec:
      containers:
        - image: harbor.nicleary.com/library/catapi:5
          command:  ['bash', '-c', 'gunicorn --bind :8000 --workers 16 --reload wsgi:application']
          imagePullPolicy: Always
          livenessProbe: #is it alive
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8000
            timeoutSeconds: 1
          name: cat-api-app
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          readinessProbe: #did it start
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8000
            timeoutSeconds: 1
          resources: { }
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
