k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cat-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cat-postgres
  template:
    metadata:
      labels:
        app: cat-postgres
    spec:
      containers:
        - name: cat-api-postgres
          image: harbor.nicleary.com/dockerhub/library/postgres:13-alpine
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
              subPath: postgres
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: cat-api-pv-claim
