k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: cat-api-service
  labels:
    app: cat-api-app
spec:
  type: ClusterIP
  ports:
   - port: 8000
     protocol: TCP
     targetPort: 8000
  selector:
   app: cat-api-app
---
apiVersion: v1
kind: Service
metadata:
  name: cat-postgres
  labels:
    app: cat-postgres
spec:
  type: ClusterIP
  ports:
   - port: 5432
     protocol: TCP
     targetPort: 5432
  selector:
   app: cat-postgres
