k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cat-api
spec:
  rules:
  - host: cats.nicleary.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cat-api-service
            port:
              number: 8000
  tls:
  - hosts:
     - cats.nicleary.com
